# Foundry-Local

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .lintrunner.toml  EMAIL_README.md  FLC_VERSION_INFO.json  LICENSE  Notes-Audio.docx  README.md  SUPPORT.md  codex-feedback.md  nuget.config
samples/cpp/audio/: CMakeLists.txt  README.md  main.cc
samples/cpp/embeddings/: CMakeLists.txt  README.md  main.cc  main.cpp
samples/cpp/native-chat-completions/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
samples/cpp/responses-api/: CMakeLists.txt  README.md  main.cc
samples/cpp/sdk-quickstart/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
samples/cpp/translation-benchmark/: CMakeLists.txt  main.cpp  translation_results.tsv  vcpkg.json
samples/cpp/translation-perf-benchmark/: CMakeLists.txt  main.cpp  translation_perf_results.tsv  vcpkg.json
samples/cpp/verify-winml/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
samples/cpp/web-server-responses-vision/: CMakeLists.txt  README.md  main.cpp  stb_impl.cpp
samples/playground/rust/: Cargo.toml  README.md  foundry-local-sdk-1.0.0-rc2.crate  main.rs  ui.rs
samples/python/agent-framework/: .env.example  README.md  pyproject.toml  requirements.txt
samples/rust/: Cargo.toml  README.md
samples/rust/audio/: Cargo.toml  README.md
samples/rust/audio-transcription-example/: Cargo.toml  README.md
samples/rust/chat-completion/: Cargo.toml  README.md
samples/rust/embeddings/: Cargo.toml  README.md
samples/rust/foundry-local-webserver/: Cargo.toml  README.md
samples/rust/foundry-local-webserver-responses-vision/: Cargo.toml
samples/rust/hello-foundry-local/: Cargo.toml  README.md
samples/rust/live-audio-transcription/: Cargo.toml  README.md
samples/rust/live-audio-transcription-example/: Cargo.toml  README.md
samples/rust/native-chat-completions/: Cargo.toml  README.md
samples/rust/responses-api/: Cargo.toml  README.md
samples/rust/tool-calling-foundry-local/: Cargo.toml  README.md
samples/rust/tutorial-chat-assistant/: Cargo.toml
samples/rust/tutorial-document-summarizer/: Cargo.toml
samples/rust/tutorial-live-meeting-note-taker/: Cargo.toml
samples/rust/tutorial-tool-calling/: Cargo.toml
samples/rust/tutorial-voice-to-text/: Cargo.toml
samples/rust/verify-winml/: Cargo.toml  README.md
samples/rust/web-server-responses/: Cargo.toml  README.md
sdk/cpp/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  client_test.cpp  vcpkg-configuration.json  vcpkg.json
sdk/cpp/cmake/: CppSdkConfig.cmake.in  FetchNativeDeps.cmake  FoundryLocalConfig.cmake  FoundryLocalNativeDeps.cmake
sdk/cpp/include/: catalog.h  configuration.h  core_interop_request.h  flcore_native.h  foundry_local.h  foundry_local_exception.h  foundry_local_manager.h  log_level.h  logger.h  model.h  parser.h
sdk/cpp/sample/: README.md  main.cpp  responses_api_qwen.cpp
sdk/cpp/src/: audio_client.cpp  catalog.cpp  chat_client.cpp  core.h  core_helpers.h  core_interop_request.h  exports.def  flcore_native.h  foundry_local.cpp  foundry_local_internal_core.h  foundry_local_manager.cpp  http_helpers.h  live_audio_session.cpp  live_audio_types.cpp  log_level.h  manager.cc  model.cpp  openai_audio_client.cpp  openai_chat_client.cpp  openai_embedding_client.cpp  openai_live_audio_client.cpp  openai_live_audio_session.cpp  openai_live_audio_types.cpp  openai_responses_client.cpp  parser.h  thread_safe_queue.h  utils.cc
sdk/cpp/test/: catalog_test.cpp  client_test.cpp  e2e_test.cpp  ep_test.cpp  live_audio_test.cpp  mock_core.h  mock_object_factory.h  model_variant_test.cpp  parser_and_types_test.cpp
sdk/cpp/triplets/: arm64-android.cmake  x64-windows-static-md.cmake
sdk/cpp/vcpkg-overlay-ports/: README.md
sdk/python/: .gitignore  .lintrunner.toml  CHANGES.md  README.md  build_backend.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-lintrunner.txt  requirements-winml.txt  requirements.txt  setup.py
sdk/python/examples/: cancellable_download.py  chat_completion.py  responses.py  responses_web_service.py
sdk/python/foundry_local/: __init__.py  api.py  client.py  models.py
sdk/python/integration_test/: test_integration.py
sdk/python/src/: __init__.py  _str_enum.py  catalog.py  ep_types.py  exception.py  foundry_local_manager.py  imodel.py  logging_helper.py  model.py  model_variant.py  request.py  version.py
sdk/python/test/: README.md  conftest.py  test_api.py  test_catalog.py  test_client.py  test_core_interop.py  test_foundry_local_manager.py  test_model.py  test_models.py  test_service.py
sdk/python/tests/: test_api.py
sdk/rust/: Cargo.toml  GENERATE-DOCS.md  README.md  build.rs
sdk/rust/docs/: api.md
sdk/rust/examples/: cancellable_download.rs  chat_completion.rs  interactive_chat.rs  responses.rs  responses_web_service.rs  tool_calling.rs
sdk/rust/src/: api.rs  catalog.rs  client.rs  configuration.rs  error.rs  foundry_local_manager.rs  hf_utils.rs  huggingface_catalog.rs  imodel.rs  lib.rs  model.rs  model_variant.rs  models.rs  service.rs  types.rs
sdk/rust/tests/: README.md  integration_tests.rs  mock_service.rs  test_api.rs
sdk_legacy/python/: README.md  pyproject.toml
sdk_legacy/python/foundry_local/: __init__.py  logging.py
sdk_legacy/python/integration_test/: test_integration.py
sdk_legacy/python/test/: test_client.py  test_service.py
sdk_v2/cpp/: CMakeLists.txt  State of the Branch.md  TODO.md  VSCodeCoverage.runsettings  build.py  parse_coverage.ps1  run_coverage.ps1  vcpkg.json
sdk_v2/cpp/cmake/: CompilerOptions.cmake  FindOnnxRuntime.cmake  FindOnnxRuntimeGenAI.cmake  FindWinMLEpCatalog.cmake  Sanitizers.cmake  SplitDebugSymbols.cmake  nuget.cmake
sdk_v2/cpp/docs/: AndroidBuildPlan.md  CIBuildPlan.md  CodingConventionsAndStandards.md  CppPortGuide.md  EpDetectionPlan.md  ItemDataOwnershipDesign.md  MigrationPlan_20260410.md  MigrationPlan_20260505.md  (+11 more)
sdk_v2/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-winml.txt  requirements.txt  setup.py
(+1731 files in other folders)
