[workspace]
members = [
    "foundry-local-webserver",
    "tool-calling-foundry-local",
    "native-chat-completions",
    "audio-transcription-example",
    "tutorial-chat-assistant",
    "tutorial-document-summarizer",
    "tutorial-tool-calling",
    "tutorial-voice-to-text",
    "verify-winml",
]
resolver = "2"
