[package]
name = "foundry-local"
version = "0.1.0"
edition = "2021"
description = "SDK for Microsoft Foundry Local service"
license = "MIT"
repository = "https://github.com/microsoft/Foundry-Local"
readme = "README.md"

[features]
integration-tests = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
which = "4.4"
regex = "1.9"
dirs = "5.0"
indicatif = "0.17"
async-trait = "0.1"
futures-util = "0.3"
url = "=2.4.1"

[dev-dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
